2003-01-29  NAKAJIMA Mikio <minakaji@osaka.email.ne.jp>

	* [w3m-dev 03705] goodict.cgi (was: Re: google.cgi (was: Re: keymap key SEARCH string))
	* Bonus/goodict.cgi: added

2003-01-29  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03700] Re: google.cgi (was: Re: keymap key SEARCH string)
	* main.c (goURL0): check relative or *url == '#'

2003-01-28  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03689] Re: fold patch
	* fm.h (BufferPos): add bpos
	* main.c (save_buffer_position): bpos initialize
		(resetPos): reset bpos

2003-01-26  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03686] Re: fold patch
	* buffer.c (writeBufferCache): rewrite
		(readBufferCache): rewrite
	* etc.c (calcPosition): short -> int realColumn
	* fm.h (Line): short -> int len,width,size,bpos,bwidth
		(BufferPoint): short->int pos
		(Buffer): short->int currentColumn,pos,visualpos
		(BufferPos): short->int currentColumn,pos
	* frame.h (frameset_queue): short->int pos,currentColumn
	* main.c (clear_mark): short->int pos
		(dispincsrch): short->int pos
		(backBf): short->int pos
		(set_buffer_environ): short->int prev_pos

2003-01-25  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03684] Re: fold patch
	* file.c (PSIZE): added
		(HTMLlineproc2body): outc,outp is created by NewAtom_N
			use PSIZE

2003-01-25  Fumitoshi UKAI  <ukai@debian.or.jp>

	* file.c (getNextPage): no need volatile for code

2003-01-25  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03683] interrupt in getNextPage()
	* file.c (getNextPage): trap SIGINT

2003-01-25  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03682] open null file on tab
	* display.c (displayBuffer): if empty, clear()

2003-01-25  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03681] Re: fold patch
	* buffer.c (reshapeBuffer): buf->pos, sbuf.currentLine fix
				FoldLine
	* display.c (arrangeCursor): buf->pos fix
		(restorePosition): buf->pos fix	
