@@ -1,5 +1,11 @@
 2003-01-29  NAKAJIMA Mikio <minakaji@osaka.email.ne.jp>
 
+	* [w3m-dev 03706] X-Image-URL: support, bug fix of reshapeBuffer()
+	* buffer.c (reshapeBuffer): rewrite
+	* file.c (readHeader): rewrite
+
+2003-01-29  NAKAJIMA Mikio <minakaji@osaka.email.ne.jp>
+
 	* [w3m-dev 03705] goodict.cgi (was: Re: google.cgi (was: Re: keymap key SEARCH string))
 	* Bonus/goodict.cgi: added
 
@@ -6886,4 +6892,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.720 2003/01/28 16:36:49 ukai Exp $
+$Id: ChangeLog,v 1.721 2003/01/28 16:40:58 ukai Exp $
